--- a/templates/powerlift.html
+++ b/templates/powerlift.html
@@ -145,6 +145,7 @@
         </div>
     </header>
 
+
     <div id="popup" class="popup">
       <div class="popup-content">
         <span class="close" onclick="document.getElementById('popup').style.display='none'">&times;</span>
@@ -163,8 +164,15 @@
       </div>
     </div>
 
-    <section class="content"> <!-- Page navigation, main intro -->
+    <nav class="sectionNav">
+        <ul class="sectionNavList">
+            <li><a href="#weightsStyles">Weights & styles</a></li>
+            <li><a href="#openTypeFeatures">OpenType features</a></li>
+            <li><a href="#glyphSet">Glyph set</a></li>
+        </ul>
+    </nav>
 
+    <section class="content"> <!-- Page navigation, main intro -->
         <div class="row">
             <div class="titleImage" style="background-image: url('images/2025/PowerLift-animation.gif');">
             </div>
