--- a/templates/powerlift.html
+++ b/templates/powerlift.html
@@ -165,7 +165,7 @@
     </div>
 
     <nav class="sectionNav">
-        <ul class="sectionNavList">
+        <ul class="sectionNavList stickyElement">
             <li><a href="#weightsStyles">Weights & styles</a></li>
             <li><a href="#openTypeFeatures">OpenType features</a></li>
             <li><a href="#glyphSet">Glyph set</a></li>
