--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2098,8 +2098,18 @@ div.image {
   height: auto;
 
 }
+
+.sectionNav {
+    background-color: red;
+    position: fixed;
+    top: 70px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+}
+
 .sectionNavList {
-    background-color: #F0F0F0;
+    background-color: red;
     position: fixed;
     top: 70px;
     left: 0;
