--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -48,7 +48,12 @@ h2 a:link, h2 a:visited, h2 a:active,
     font-weight: 600;
     color: #202020;
 }
+
 h2 a:hover, .sectionNavList a:hover {
+    color: #E31C79;  
+}
+
+h2 a:active, .sectionNavList a:active {
     color: #E31C79;  
 }
 
@@ -2101,16 +2106,19 @@ div.image {
 }
 
 .sectionNav {
-    background-color: red;
+    background-color: #F0F0F0;
     position: fixed;
+        z-index: 10000000;
     top: 70px;
     left: 0;
     right: 0;
     width: 100vw;
+    box-shadow: 0 14px 16px rgba(0, 0, 0, 0.2);
+
 }
 
 .sectionNavList {
-    background-color: red;
+    background-color: #F0F0F0;
     position: fixed;
     top: 70px;
     left: 0;
@@ -2123,7 +2131,6 @@ div.image {
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
-    z-index: 1000;
     border-bottom: 1px solid #202020;
     opacity: 0;
     pointer-events: none; /* voorkomt klikbare links als verborgen */
@@ -2576,7 +2583,7 @@ button.buy-button:hover {
 /* Large Tablets / Small Desktop (992–1199px) */
 @media (min-width: 992px) and (max-width: 1199px) { 
     header {
-        background-color: red; /* Testing responsive */
+        background-color: black; /* Testing responsive */
     }    
     fontdue-type-testers .type-tester {
     --type-tester--adjustment: 1;
@@ -2595,7 +2602,7 @@ button.buy-button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: red; /* Testing responsive */
+        background-color: black; /* Testing responsive */
     }    
     .row {
         width: 1200px;
@@ -2609,7 +2616,7 @@ button.buy-button:hover {
 /* Large Desktop (1600px+) */
 @media (min-width: 1600px) { 
     header {
-        background-color: red; /* Testing responsive */
+        background-color: black; /* Testing responsive */
     }    
     .row {
         width: 1200px;
