--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2629,6 +2629,10 @@ button.buy-button:hover {
 }
 
 div.type-tester {
-    padding-top: 120px;
+    padding-top: 0px;
     padding-bottom: 0px;
+}
+
+div.character-viewer{
+    padding-top: 40px;    
 }
