--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2106,40 +2106,48 @@ div.image {
 
 .sectionNav {
     position: fixed;
-    z-index: 10000000;
     top: 70px;
     left: 0;
     right: 0;
-    width: 100vw;
-
-}
-
-.sectionNavList {
-    background-color: #F0F0F0;
     width: 100%;
-    margin: 0 auto;
-    list-style: none;
-    font-size: 17pt;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 10px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
+    z-index: 10000000;
+
+    background-color: #F0F0F0;      
     border-bottom: 1px solid #202020;
     box-shadow: 0 14px 16px rgba(0, 0, 0, 0.2);
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
 }
 
-.sectionNavList.is-visible {
+.sectionNav.is-visible {
     opacity: 1;
     pointer-events: auto;
 }
 
+.sectionNavList {
+    width:100%;
+    max-width: 1200px;     
+    margin: 0;      
+    padding-top: 0px;     
+    padding-bottom: 10px; 
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4em;
+}
+
 @media (min-width: 768px) {
     .sectionNavList {
-        flex-direction: row;  
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1200px;
+        flex-direction: row;
+        justify-content: flex-start; /* eerder: justify-content: center; */
         gap: 1.5em;
     }
-}
+}}
 
 div.responsiveShow {
     display: none;
