Hide the menu on Mobile size
- Fix: Hamburger menu

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1891,7 +1891,7 @@ header .navbar ul {
     display: flex;
 }
 header .navbar li {
-    margin-right: 20px;
+    margin-right: 10px;
 }
 header .navbar a {
     color: white;
@@ -2061,7 +2061,6 @@ div.image {
 .column p {
     margin: 0 40px 0 0;
 }
-
 
 .column14 {
     /*flex: 1;*/
@@ -2250,7 +2249,7 @@ button.buy-button:hover {
 /* Extra Small Phones (320–359px) */
 @media (max-width: 359px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName, header .logo {
@@ -2306,11 +2305,14 @@ button.buy-button:hover {
     .responsiveShow {
         display: none;
     }
+    #navbar{
+        display: none;
+    }
 }
 /* Small Phones (360–399px) */
 @media (min-width: 360px) and (max-width: 399px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /* Testing responsive */
     }    
     /*header .navbar, */
     header .familyName {
@@ -2368,6 +2370,9 @@ button.buy-button:hover {
         display: none;
     }
     .responsiveShow {
+        display: none;
+    }
+    #navbar{
         display: none;
     }
 }
@@ -2431,6 +2436,9 @@ button.buy-button:hover {
     .quit{
         display: none;
     }
+    #navbar{
+        display: none;
+    }
 }
 /* Large Phones (480–599px) */
 @media (min-width: 480px) and (max-width: 599px) { 
@@ -2490,6 +2498,9 @@ button.buy-button:hover {
         margin-right: 1em;
     }
     .quit{
+        display: none;
+    }
+    #navbar{
         display: none;
     }
 }
