--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1935,6 +1935,10 @@ header .hamburger {
     animation: fadeIn 0.7s ease-out forwards;
 }
 
+header .hamburger:hover{
+    color: #E31C79;  
+}
+
 /* Slideshow */
 
 .slideshow {
@@ -2014,6 +2018,10 @@ div.image {
   background-color: rgba(0, 0, 0, 0.6); 
   animation: fadeIn .4s forwards;
   z-index: 1000;
+}
+
+.store-modal__container__background {
+    animation: fadeIn .5s forwards;
 }
 
 .popup-content {
@@ -2267,6 +2275,29 @@ button.buy-button:hover {
 }
 /* Media Queries */
 
+@media (min-width: 359px) and (max-width: 767px) { 
+    #navbar{
+        display: none;
+        position: absolute;
+        background-color: #F0F0F0;    
+        color:black;  
+        top: 0px;
+        right:0px;
+        width: 50%;
+        height:100vw;
+        margin-right: 10px;
+        display: block;
+        float: left;
+        margin: 0px;
+        padding: 4px;
+        padding-right: 15px;
+        padding-bottom: 10px;
+        animation: slideIn 0.5s ease-out forwards;
+        border-left: 1px solid #202020;
+        flex-direction: row;
+    }
+}
+
 /* Extra Small Phones (320–359px) */
 @media (max-width: 359px) { 
     header {
@@ -2320,9 +2351,6 @@ button.buy-button:hover {
         display: none;
     }
     .responsiveShow {
-        display: none;
-    }
-    #navbar{
         display: none;
     }
 }
@@ -2384,9 +2412,6 @@ button.buy-button:hover {
     .responsiveShow {
         display: none;
     }
-    #navbar{
-        display: none;
-    }
 }
 /* Medium Phones (400–479px) */
 @media (min-width: 400px) and (max-width: 479px) { 
@@ -2441,9 +2466,6 @@ button.buy-button:hover {
         margin-right: 1em;
     }
     .quit{
-        display: none;
-    }
-    #navbar{
         display: none;
     }
 }
@@ -2502,9 +2524,6 @@ button.buy-button:hover {
     .quit{
         display: none;
     }
-    #navbar{
-        display: none;
-    }
 }
 /* -------------------------------------------------------------- */
 /* Small Tablets (600–767px) */
@@ -2560,9 +2579,6 @@ button.buy-button:hover {
         display: none;
     }
     .responsiveShow {
-        display: none;
-    }
-    header .hamburger {
         display: none;
     }
 }
