--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2286,32 +2286,38 @@ button.buy-button:hover {
 }
 /* Media Queries */
 
+.box {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); 
+  animation: fadeIn .4s forwards;
+  z-index: 10000000000;
+}
+
 #menuBox{
-    display: none;
     position: fixed;
     background-color: #F0F0F0;      
     color:black;  
     top: 0px;
     right:0px;
     text-decoration: none;
-    width: 50%;
+    width: 200px;
     height:100vh;
     margin-right: 10px;
     display: block;
     float: left;
     margin: 0px;
-    padding: 4px;
+    padding-top: 10px;
+    padding-left: 20px;
     padding-right: 15px;
     animation: slideIn 0.5s ease-out forwards;
     border-left: 1px solid #202020;
     flex-direction: row;
     z-index: 1000000;
-}
-
-@media (min-width: 359px) and (max-width: 767px) { 
-    #menuBox{
-        display: none;
-    }
 }
 
 /* Extra Small Phones (320–359px) */
