--- a/templates/powerlift.html
+++ b/templates/powerlift.html
@@ -140,21 +140,20 @@
                 <li><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></li>
             </ul>
         </nav>
-        <div class="hamburger" onclick="document.getElementById('menuBox').style.display='block'">
+        <div class="hamburger" onclick="document.getElementById('box').style.display='block'">
             ☰
         </div>
     </header>
 
-
-    <nav id="menuBox" class="menuBox">
-        <span class="close" onclick="document.getElementById('menuBox').style.display='none'">&times;</span>
-        <ul>
-            <li><a href="index.html">Fonts</a></li>
-            <li><a href="custom.html">Custom</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></li>
-        </ul>
-    </nav>
+    <div id="box" class="box">
+        <nav id="menuBox" class="menuBox">
+            <span class="close" onclick="document.getElementById('box').style.display='none'">&times;</span>
+            <h2><a href="index.html">Fonts</a></h2>
+            <h2><a href="custom.html">Custom</a></h2>
+            <h2><a href="contact.html">Contact</a></h2>
+            <h2><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></h2>
+        </nav>
+    </div>
 
     <div id="popup" class="popup">
       <div class="popup-content">
