--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -48,6 +48,10 @@ li a:hover {
     color: #808080;
 }
 
+a {
+  transition: color 100ms cubic-bezier(0.33, 1, 0.68, 1);
+}
+
 /* Reset */
 
 h1, h2, h3, h4, h5, h6,
@@ -2113,15 +2117,14 @@ div.image {
 }
 
 .column14 {
-    /*flex: 1;*/
     width: 25%;
+    min-width: 260px;     
     padding-right: 16px;
     box-sizing: border-box;
     background-color: #F0F0F0;
 }
 .column34 {
-    /*flex: 1;*/
-    width: 75%;
+    flex: 1;
     padding-right: 16px;
     box-sizing: border-box;
     background-color: #F0F0F0;
@@ -2213,7 +2216,7 @@ div.image {
 
     .sticky img {
         width:40%;
-        max-width: 40%; /* pas aan naar wens */
+        max-width: 150px; /* pas aan naar wens */
         height: auto;
     }
 
