--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2220,6 +2220,9 @@ div.image {
         justify-content: flex-start; /* eerder: justify-content: center; */
         gap: 1.5em;
     }
+    div.column14.topline.ab{
+        padding-top:15px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -2244,6 +2247,18 @@ div.image {
 
     .sticky p.contact {
         margin: 0; /* eventueel */
+    }
+
+    div.column14.topline.ab{
+        padding-left:0px;
+        padding-right:0px;
+        padding-top:0px;
+        padding-bottom:0px;
+    }
+    .sectionNavList {
+        padding-top: 0px;     
+        padding-left: 0px;     
+        padding-bottom: 0px; 
     }
 }
 
